:memo: Fixed auth documentation
